--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ backend/app/__pycache__/extensions.cpython-310.pyc
 backend/app/__pycache__/models.cpython-310.pyc
 backend/app/__pycache__/resources.cpython-310.pyc
 backend/instance/sqlite3.db
+backend/app/__pycache__/__init__.cpython-310.pyc
