--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ backend/app/__pycache__/resources.cpython-310.pyc
 backend/instance/sqlite3.db
 backend/app/__pycache__/__init__.cpython-310.pyc
 backend/instance/sqlite3.db
+backend/instance/sqlite3.db
