--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,4 @@ backend/instance/sqlite3.db
 backend/app/__pycache__/__init__.cpython-310.pyc
 backend/instance/sqlite3.db
 backend/instance/sqlite3.db
+*.pyc
