--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,8 @@ backend/app/__pycache__/__init__.cpython-310.pyc
 backend/instance/sqlite3.db
 backend/instance/sqlite3.db
 *.pyc
+backend/app/__pycache__/__init__.cpython-39.pyc
+backend/app/__pycache__/api_models.cpython-39.pyc
+backend/app/__pycache__/extensions.cpython-39.pyc
+backend/app/__pycache__/models.cpython-39.pyc
+backend/app/__pycache__/resources.cpython-39.pyc
