--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+backend/app/__pycache__/
 backend/app/__pycache__/__init__.cpython-39.pyc
 backend/app/__pycache__/api_models.cpython-39.pyc
 backend/app/__pycache__/extensions.cpython-39.pyc
