--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,4 @@
 backend/app/__pycache__/
-backend/app/__pycache__/__init__.cpython-39.pyc
-backend/app/__pycache__/api_models.cpython-39.pyc
-backend/app/__pycache__/extensions.cpython-39.pyc
-backend/app/__pycache__/models.cpython-39.pyc
-backend/app/__pycache__/resources.cpython-39.pyc
-backend/instance/sqlite3.db
-backend/app/__pycache__/__init__.cpython-310.pyc
-backend/app/__pycache__/api_models.cpython-310.pyc
-backend/app/__pycache__/extensions.cpython-310.pyc
-backend/app/__pycache__/models.cpython-310.pyc
-backend/app/__pycache__/resources.cpython-310.pyc
-backend/instance/sqlite3.db
-backend/app/__pycache__/__init__.cpython-310.pyc
-backend/instance/sqlite3.db
-backend/instance/sqlite3.db
 *.pyc
-backend/app/__pycache__/__init__.cpython-39.pyc
-backend/app/__pycache__/api_models.cpython-39.pyc
-backend/app/__pycache__/extensions.cpython-39.pyc
-backend/app/__pycache__/models.cpython-39.pyc
-backend/app/__pycache__/resources.cpython-39.pyc
+__pycache__/
+backend/instance/sqlite3.db
